update:Ui components for search and filter

--- a/feature/github_repo_clone/client/stylesheets/style.scss
+++ b/feature/github_repo_clone/client/stylesheets/style.scss
@@ -2,6 +2,9 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto:400,500,700,900&display=swap');
 @import './header';
 @import './banner';
+@import './githubContent';
+@import './search';
+@import './filter';
 
 body {
     width: 100%;
