--- a/feature/github_repo_clone/client/stylesheets/_banner.scss
+++ b/feature/github_repo_clone/client/stylesheets/_banner.scss
@@ -13,10 +13,18 @@
 }
 
 .banner_content {
-    height: 15vh;
+    height: 15.35vh;
 }
 
 .banner_button {
-    padding: 1rem 2.5rem;
+    padding: 0.9rem 2.6rem;
     font-size: 1rem;
+    background-color: white;
+    border: 0.2px solid rgb(214, 207, 207);
+    border-bottom: none;
+    font-weight: 700;
+    cursor: pointer;
+    outline: none;
+    border-top: 3px solid red;
+
 }
