--- a/feature/github_repo_clone/client/stylesheets/_banner.scss
+++ b/feature/github_repo_clone/client/stylesheets/_banner.scss
@@ -2,6 +2,7 @@
     background-color: #FAFBFC;
     height: 20vh;
     border-bottom: 0.2px solid rgb(214, 207, 207);
+    margin-bottom: 1.5rem;
 }
 
 .banner_container {
