--- a/feature/github_repo_clone/client/stylesheets/_githubContent.scss
+++ b/feature/github_repo_clone/client/stylesheets/_githubContent.scss
@@ -3,11 +3,18 @@
     margin: 0 auto;
     padding-bottom: 1rem;
     border-bottom: 0.2px solid rgb(214, 207, 207);
-    margin-bottom: 1rem;
+    margin-bottom: 2rem;
 }
 
 .github_content_container {
     display: flex;
     width: 100%;
+    margin: 0 auto;
+}
+
+.repo_container {
+    margin-bottom: 2rem;
+    border-bottom: 0.2px solid rgb(214, 207, 207);
+    width: 55%;
     margin: 0 auto;
 }
