--- a/feature/github_repo_clone/client/stylesheets/_filter.scss
+++ b/feature/github_repo_clone/client/stylesheets/_filter.scss
@@ -2,3 +2,50 @@
     display: flex;
     justify-content: flex-start;
 }
+
+.type_filter_container {
+    border: 0.8px solid rgb(214, 207, 207);
+    margin-right: 1rem;
+    background-color: #E8EDF2;
+    cursor: pointer;
+    border-radius: 4px;
+
+    label {
+        margin-top: 0.5rem;
+        padding: 0.5rem;
+    }
+
+    select {
+        border: none;
+        background-color: #E8EDF2;
+        padding: 1rem;
+        outline: none;
+        margin-top: 0.5rem;
+        margin-right: 0.5rem;
+        cursor: pointer;
+
+    }
+}
+
+.language_filter_container {
+    border: 0.8px solid rgb(214, 207, 207);
+    margin-right: 1rem;
+    background-color: #E8EDF2;
+    border-radius: 4px;
+
+
+    label {
+        margin-top: 0.5rem;
+        padding: 0.5rem;
+    }
+
+    select {
+        border: none;
+        background-color: #E8EDF2;
+        padding: 1rem;
+        outline: none;
+        margin-top: 0.5rem;
+        margin-right: 0.5rem;
+        cursor: pointer;
+    }
+}
